--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
 <body>
   <div class="container grid">
-    <div class='child'>50px</div>
-    <div class='child'>1fr</div>
-    <div class='child'>50px</div>
-    <div class='child'>1fr</div>
-    <div class='child'>100px</div>
+    <div class='child'></div>
+    <div class='child'></div>
+    <div class='child'></div>
   </div>
 </body>
 
