--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div class='child'></div>
     <div class='child'></div>
     <div class='child'></div>
+    <div class='child'></div>
+    <div class='child'></div>
+    <div class='child'></div>
+    <div class='child'></div>
   </div>
 </body>
 
