grid autofit vs autofill

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class='child'></div>
     <div class='child'></div>
     <div class='child'></div>
+    <div class='child'></div>
   </div>
 </body>
 
