--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
   <div class="container grid">
+    <div class='child banner'></div>
+    <div class='child'></div>
+    <div class='child'></div>
+    <div class='child'></div>
+    <div class='child'></div>
     <div class='child'></div>
     <div class='child'></div>
     <div class='child'></div>
