--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container grid">
     <div class='child banner'></div>
-    <div class='child'></div>
+    <div class='child side'></div>
     <div class='child'></div>
     <div class='child'></div>
     <div class='child'></div>
