--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="container grid">
-    <div class='child banner'></div>
-    <div class='child side'></div>
+    <div class='child banner'>banner</div>
+    <div class='child side'>side</div>
     <div class='child'></div>
     <div class='child'></div>
     <div class='child'></div>
