Grid template area

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 
 <body>
   <div class="container grid">
-    <div class='child banner'>banner</div>
-    <div class='child side'>side</div>
-    <div class='child'></div>
-    <div class='child'></div>
-    <div class='child'></div>
-    <div class='child'></div>
-    <div class='child'></div>
-    <div class='child'></div>
+    <header>Header</header>
+    <nav>Nav</nav>
+    <main>Main</main>
+    <aside>Aside</aside>
+    <section>Section</section>
+    <footer>Footer</footer>
   </div>
 </body>
 
